--- a/src/components/CustomerForm.css
+++ b/src/components/CustomerForm.css
@@ -58,6 +58,12 @@ body {
     font-size: 24px;
 }
 
+pre{
+    color: red;
+    display: inline;
+    background-color: #00b4d8;
+}
+
 .main {
     grid-area: main;
     background-color: #00b4d8;
@@ -79,7 +85,7 @@ body {
     border: none;
 }
 
-#verifyPan, #addressbutton{
+#verifyPan, #addressbutton, #removeAddress{
     font-family: "Poppins", sans-serif;
     border: none;
     background-color: #023e8a;
@@ -237,7 +243,7 @@ h4{
         font-size: 2.4rem;
     }
 
-    #verifyPan, #addressbutton{
+    #verifyPan, #addressbutton, #removeAddress{
         width: 24rem ;
         height: 8rem;
         border-radius: 2rem;
